--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<main class="main">
-  <span>Let's build that portfolio!</span>
-</main>
+<div class="main">
+  <app-header />
+  <app-content />
+</div>
 
 
 <!-- <router-outlet /> -->
