--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,8 @@
 .main {
-    width: 100%;
-    min-height: 100%;
+    /* width: 100%;
+    height: 100%; */
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    box-sizing: inherit;
-    position: relative;
+    flex-direction: column;
+    /* justify-content: center;
+    align-items: center; */
 }
