Navigation menu, routing, about me components

--- a/src/app/about-me/aboutMe.component.html
+++ b/src/app/about-me/aboutMe.component.html
@@ -1,3 +1,12 @@
-<div>
-    About Me
+<div class="content-container">
+    <h1>
+        Hello! Nice to meet you.
+    </h1>
+    <span>
+        I am Pooja – a graduate student and an experienced full-stack developer with a robust background spanning over 5 years in the industry.
+    </span>
+
+    <div class="profile-picture-section animated-picture">
+        <img src="assets/pooja.jpg" alt="Pooja Mule" class="profile-picture" />
+    </div>
 </div>
