--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,40 @@
 .main {
-    /* width: 100%;
-    height: 100%; */
     display: flex;
     flex-direction: column;
-    /* justify-content: center;
-    align-items: center; */
+    background-color: #000000;
+    height: 100vh;
+    color: white;
+    overflow: scroll;
+}
+
+.header-container {
+    background-color: #B76D79;
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 64px;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.left-container {
+    align-items: flex-start;
+    width: 50%;
+    margin-left: 20px;
+}
+
+.right-container {
+    align-items: flex-end;
+    margin-right: 20px;
+    display: flex;
+}
+
+.header-title {
+    cursor: pointer;
+}
+
+.body-container {
+    padding-top: 80px;
 }
